# utilities

./: .gitignore  .gitmodules  .project  BuildMacros.cmake  BuildMacros2.cmake  CMakeLists.txt  FunctionDefinitions.cmake  OpenCMISS.cmake  OpenCMISSLocalConfig.cmake
CMakeFindModuleWrappers/: FindXXX.in.cmake
CMakeModules/: FindMPI.cmake  FindMUMPS.cmake  FindSUNDIALS.cmake
CMakeScripts/: CMakeCheck.cmake  DependenciesTargets.cmake  OCMUtilsArchitecture.cmake  OCMUtilsBuildMacros.cmake  OpenCMISSConfig.cmake  OpenCMISSDefaultConfig.cmake  OpenCMISSLocalConfig.template.cmake
cmake_modules/: TargetArch.cmake
